static/css/components/recommendations.css
.pci2-articles-list {
  max-width: 1200px;
  width: 100%;
}

.pci2-article-row:nth-child(odd) {
  background-color: #f7f9fb;
}

.pci2-article-row:nth-child(even) {
  background-color: #e5eef4;
}

.pci2-article-row.printable {
  background-color: transparent;
}

/* Article Recommendation row */
.pci2-article-image-div {
  min-width: 150px;
}

.pci2-article-image-div > img {
  max-width: 150px;
  max-height: 120px;
}

.pci2-article-row {
  border-radius: 5px;

  margin-bottom: 15px;
  width: 100%;
  padding: 7.5px 15px;
}

.pci2-article-left-div {
  margin-right: 15px;
}

.pci2-article-row i {
  color: #888;
}

.pci2-article-row h3,
.article-title {
  font-size: 16px;
  margin: 0;
  margin-bottom: 3px;
  font-weight: bold;
  color: #555;
}

.pci2-article-row h3 {
  font-size: 18px;
}

.pci2-article-row h4 {
  margin: 5px 0;
  margin-bottom: 2.5px;
  font-size: 16px;
  font-weight: bold;
  color: #555;
}

.pci2-article-row h3 p,
.article-title p {
  margin: 0;
}

.pci2-article-infos {
  font-size: 14px;
  line-height: 20px;
}

.pci2-article-recommendation-div {
  padding: 0px 15px;
  margin-top: 10px;
  margin-bottom: 5px;
  padding-right: 0;
  border-left: 1px solid #ddd;
  font-style: italic;
}

.pci2-article-recommendation-div p {
  margin: 0;
  font-size: 12px;
}

.pci2-altmetric {
  margin-top: 5px;
}

/* Article Reccom Page */
#title-reviews {
  transition: opacity 0.3s ease;
}

.pci2-recomm-article-h2 {
  margin: 0;
  color: #888;
}

.pci2-recomm-article-h2 .glyphicon {
  color: #598398 !important;
}

h2.pci2-recomm-article-h2 .pci2-main-color-text {
  font-size: 28px !important;
}

h4.pci2-recomm-article-h2 .glyphicon {
  font-size: 23px !important;
}

.pci2-signle-toggle-button {
  margin-top: 20px;
  margin-bottom: 0px;
}

/* Recommendation Header */
.pci2-recommendation-green-banner {
  background: #1ca01c;
  color: #fff;

  white-space: initial;
  font-size: 32px;
  text-align: center;
  padding: 10px;
  width: 100%;
  border-radius: 5px;
}

.pci2-recomm-title {
  margin: 20px 0 10px;
}

.pci2-recomm-title h1 {
  margin: 0;
  margin-bottom: 5px;
  font-size: 28px;
}

.pci2-recomm-title i {
  margin: 0;
  font-size: 16px;
}

.pci2-article-row-short {
  margin-bottom: 10px;
  padding: 20px;
}

.pci2-article-left-div-short {
  margin-right: 20px;
}

.pci2-recomm-date {
  margin-bottom: 10px;
}

.pci2-user-cv-label {
  position: absolute;
  margin-top: -11px;
  margin-left: 10px;
  color: #598398bb;
  background: #fff;
  padding: 0 7.5px;
}

.pci2-recomm-text-label {
  position: relative;
  display: inline-block;
  top: -11px;
  margin-top: -11px;
  margin-left: 10px;
  margin-right: 1rem;
  color: #598398bb;
  background: #fff;
  padding: 0 7.5px;
  font-weight: bold;
}

.pci2-recomm-review-container {
  border: 1px solid #42748d48;
  border-radius: 5px;
}

.pci2-recomm-text {
  padding: 15px;
  margin: 10px 0;
}

.pci2-abstract-div {
  animation: 0.5s fadeFormTop ease;
  color: #888;
}

.pci2-fade-in-top {
  animation: 0.5s fadeFormTop ease;
}

.pci2-abstract-div h1,
.pci2-abstract-div h2,
.pci2-abstract-div h3,
.pci2-abstract-div ul,
.pci2-abstract-div li,
.pci2-abstract-div blockquote,
.pci2-abstract-div div,
.pci2-abstract-div p {
  background: none !important;
  color: #888 !important;
}

.pci2-revision-round-title {
  color: #555;
  margin-bottom: 0px;
}

.pci2-revision-round-preprint-doi,
.pci2-revision-round-preprint-version
{
  font-weight: bold;
  margin-bottom: 2px;
}

.pci2-revision-round-preprint-version {
  margin-bottom: 3em; /* compensate for recomm-text-label: -11px */
}

.pci2-revision-round-date {
  color: #aaa;
  font-weight: bold;
  font-style: italic;
  margin-top: .5em;
  margin-bottom: .5em;
  display: inline-block;
}

/* Review Rounds */
.pci2-round-recomm-text {
  padding: 15px;
  margin: 0;
  margin-bottom: 5px;
  margin-top: 15px;
  border-radius: 5px;
  border: 1px solid #eee;
}

.pci2-round-review-sub-title {
  margin-top: 20px;
  font-weight: bold;
  color: #555;
}

/* Comment Tree */
.pci2-comment-tree-div {
  margin-bottom: 20px;
}

.pci2-comment-div {
  margin-top: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-left: 16px;
  border-left: 1px solid #eee;
}

.pci2-comment-infos {
  margin-top: 0;
  margin-bottom: 5px;
  font-weight: bold;
  color: #aaa;
  font-style: italic;
}

.pci2-comment-text {
  margin-top: 0;
  margin-bottom: 5px;
}

.pci2-comment-reply-link {
  margin-top: 5px;
  /* make link lighter than user profile link */
  opacity: 0.75;
}

/* Comment Form */
.pci2-comment-form-replyto-label b {
  margin-right: 5px;
}

.pci2-comment-form-replyto-label i {
  color: #888;
}

.pci2-comment-form .btn-success {
  margin: 5px 0;
}

.pci2-comment-form textarea {
  resize: none;
  height: 130px;
}

/* Recommendation process for submitter */
.progress-step-div {
  margin-left: 40px;
}
.progress-last-step-div {
  margin-left: 45px;
}

.progress-step-circle {
  margin-left: -40px;
  width: 75px;
  min-width: 75px;
  height: 75px;
  min-height: 75px;
  border-radius: 50%;
  background: white;
}

.mini-progress-step-circle {
  border: 5px solid #29abe0;
  width: 40px;
  min-width: 40px;
  height: 40px;
  min-height: 40px;
  border-radius: 50%;
  background: white;
  float: left;
  margin-right: 5px;

  i {
    font-size: 20px;
  }
}

.final-step-done-mini .mini-progress-step-circle {
  border-color: #93c54b;
}

.pci-status-mini {
  font-size: 13px;
  width: max-content;
  max-width: 250px;
  max-height: 200px;
  overflow: auto;
}

.pci-status-mini h3 {
  font-weight: bold;
  margin: 0px;
  color: #29abe0;
  margin-bottom: 8px;
  font-size: 14px;
}

.pci-status-mini.final-step-done-mini h3 {
  color: #93c54b;
}

.pci-status-mini.danger-step h3 {
  color: #b90000;
}

.pci-status-mini.warning-step h3 {
  color: #f47c3c;
}

.step-number {
  display: none;
}

.progress-step-div .step-description {
  min-height: 125px;
  margin-left: 25px;
}
.progress-last-step-div .step-description {
  margin-left: 25px;
}

.progress-step-div .glyphicon,
.progress-last-step-div .glyphicon {
  font-size: 35px;
}

.step-default {
  display: none;
}

.progress-step-div.step-default {
  border-left: 5px solid #eaeaea;
}
.progress-step-div.step-default .progress-step-circle,
.progress-last-step-div.step-default .progress-step-circle {
  border: 5px solid #eaeaea;
}
.progress-step-div.step-default .glyphicon,
.progress-last-step-div.step-default .glyphicon {
  color: #bbb;
}

.progress-step-div.step-done {
  border-left: 5px solid #93c54b;
}

.progress-step-div.step-done.progress-last-step-div {
  border-left: 0px;
}

.progress-step-div.step-done .progress-step-circle,
.progress-last-step-div.step-done .progress-step-circle {
  border: 5px solid #93c54b;
}
.progress-step-div.step-done h3,
.progress-last-step-div.step-done h3 {
  color: #93c54b;
}
.progress-step-div.step-done .glyphicon,
.progress-last-step-div.step-done .glyphicon {
  color: #555;
}


.progress-step-div.step-done.current-step {
  border-left: 0px;
}
.progress-step-div.step-done.current-step .progress-step-circle,
.progress-last-step-div.step-done.current-step .progress-step-circle {
  border: 5px solid #29abe0;
  margin-left: -35px;
}
.progress-step-div.step-done.current-step h3,
.progress-last-step-div.step-done.current-step h3 {
  color: #29abe0;
}

.progress-step-div.step-current {
  border-left: 5px solid #ffbf00;
}
.progress-step-div.step-current .progress-step-circle,
.progress-last-step-div.step-current .progress-step-circle {
  border: 5px solid #ffbf00;
}
.progress-step-div.step-current .glyphicon,
.progress-last-step-div.step-current .glyphicon {
  color: #555;
}

@media (max-width: 600px) {
  .pci2-article-left-div {
    margin-bottom: 10px;
  }

  #pci-ArticleHeader img {
    display: none;
  }

  .pci2-recomm-title h1 {
    font-size: 22px;
  }
}

